--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body class="container">
-   <header>Welcome to My World</header>
+   <header>Welcome to My Wonderful World</header>
    <nav><u><a href="file:///Users/qitongxiao/Desktop/comwebsite/index.html">Home Page</a></u><br>
    <ul><br>
      <li><a href="file:///Users/qitongxiao/Desktop/comwebsite/geoscience.html">Earth Resources, Society and Enviroment</a></li><br>
