--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
      <img src="img/me.jpg" width="410" height="250" alt="me" style="float: left; margin-right:10px; margin-top: 5px; margin-bottom 5px"/>
      <p>Hi! My names is Esther Xiao, and I am a third-year Communication major student at Virginia Tech. In this website, I will show you my school life with courses I am taking this semester and the wonderful teachers I have had.</p>
      <br><p>This semester, I am taking six classes in total. Three of them are Communicaiton classes, and the all others are General Education classes of univeristy requirement.</p>
-         <br><br>It is my pleasure to share all my classes and my wonderful professors. <br>ENJOY YOUR VISIT :)</p><br>
+         <br><br><br>It is my pleasure to share all my classes and my wonderful professors. <br>ENJOY YOUR VISIT :)</p><br>
      </main>
      <aside><u>Related Links</u>
      <ul><br>
