--- a/geoscience.html
+++ b/geoscience.html
@@ -12,12 +12,12 @@
    <header>World of Science</header>
    <nav><u><a href="file:///Users/qitongxiao/Desktop/comwebsite/index.html">Home Page</a></u><br>
    <ul><br>
-     <li><a href="file:///Users/qitongxiao/Desktop/comwebsite/geoscience.html">Earth Resources, Society and Enviroment</a></li><br>
-     <li><a href="file:///Users/qitongxiao/Desktop/comwebsite/firstsemester.html">First-Semester Experience COMM</a></li><br>
-     <li><a href="file:///Users/qitongxiao/Desktop/comwebsite/hebrewbible.html">Hebrew Bible/Old Testament</a></li><br>
-     <li><a href="file:///Users/qitongxiao/Desktop/comwebsite/math.html">Math</a></li><br>
-     <li><a href="file:///Users/qitongxiao/Desktop/comwebsite/rhetorictradition.html">Rhetoric Tradition</a></li><br>
-     <li><a href="file:///Users/qitongxiao/Desktop/comwebsite/visualmedia.html">Visual Media</a></li><br>
+     <li><a href="geoscience.html">Earth Resources, Society and Enviroment</a></li><br>
+     <li><a href="firstsemester.html">First-Semester Experience COMM</a></li><br>
+     <li><a href="hebrewbible.html">Hebrew Bible/Old Testament</a></li><br>
+     <li><a href="math.html">Math</a></li><br>
+     <li><a href="rhetorictradition.html">Rhetoric Tradition</a></li><br>
+     <li><a href="visualmedia.html">Visual Media</a></li><br>
      <li>&nbsp</li>
      <img src="img/bird2.jpg"width="70" height="70">
      </ul></nav>
