--- a/geoscience.html
+++ b/geoscience.html
@@ -24,7 +24,7 @@
    <main>
      <h1>GEOS_1024: Earth Resources, Society & Enviroment</h1>
      <h2>Instructor: John Chermak</h2>
-       <img src="img/Chermak.jpg" width="200" height="200" alt="Chermak" style="float: left; margin-right:11px; margin-top: 10px; margin-bottom 5px"/>
+       <img src="img/chermak.jpg" width="200" height="200" "alt="chermak" style="float: left; margin-right:11px; margin-top: 10px; margin-bottom 5px"/>
        <h3>Specialties: </h3>
          <p>Water-Rock Interactions, Mining, Water Quality, Water Treatment, Clay Minerals, Acid Rock Drainage, Pit Lakes, Sustainability, Social Responsibility</p><br>
         <br><h3>Article Published:</h3>
