--- a/math.html
+++ b/math.html
@@ -23,7 +23,7 @@
      </ul></nav>
    <main>
      <h1>MATH_1014: Math</h1>
-     <h2><a href="https://www.emporium.vt.edu">Math Emporium</a></h2>
+     <h2><a href="https://www.emporium.vt.edu">Math Emporium Official Website</a></h2>
       <img src="img/math.jpg" width="320" height="180" "alt="math" style="float: left; margin-right:10px; margin-top: 5px; margin-bottom 5px; margin-left 5px">
      <h3>The Math Emporium at Virginia Tech is a learning center for the study of mathematics. There are more than 500 Apple workstations arranged in hexagonal pods six computers in each. A Testing Center room provides 221 additional workstations for proctored exams. There are also large meeting areas equipped with a computer projection system and whitebords for formal presentations.</h3><br>
      <h3>On Media:</h3>
