--- a/rhetorictradition.html
+++ b/rhetorictradition.html
@@ -43,6 +43,7 @@
        <li><a href="https://vt.edu">Virginia Tech</a></li><br>
        <li><a href="https://liberalarts.vt.edu">College of Liberal Arts</a></li><br>
        <li><a href="https://liberalarts.vt.edu/departments-and-schools/department-of-communication.html">Communication Major</a></li><br>
+       <img src="img/vtmap.jpg"width="95" height="70">
      </aside>
      <footer>CONTACT INFORMATION
          <h6>Name: Esther Xiao</h6>
