--- a/geoscience.html
+++ b/geoscience.html
@@ -10,7 +10,7 @@
   </head>
   <body class="container">
    <header>World of Science</header>
-   <nav><u><a href="file:///Users/qitongxiao/Desktop/comwebsite/index.html">Home Page</a></u><br>
+   <nav><u><a href="index.html">Home Page</a></u><br>
    <ul><br>
      <li><a href="geoscience.html">Earth Resources, Society and Enviroment</a></li><br>
      <li><a href="firstsemester.html">First-Semester Experience COMM</a></li><br>
@@ -27,9 +27,9 @@
        <img src="img/chermak.jpg" width="200" height="200" alt="chermak" style="float: left; margin-right:11px; margin-top: 10px; margin-bottom 5px"/>
        <h3>Specialties: </h3>
          <p>Water-Rock Interactions, Mining, Water Quality, Water Treatment, Clay Minerals, Acid Rock Drainage, Pit Lakes, Sustainability, Social Responsibility</p><br>
-        <br><h3>Article Published:</h3>
+        <h3>Article Published:</h3>
         <p>Processes that control mineral and element abundances in shales (Earth-Science Reviews 171 June)</p><br>
-        <br><h3>Conference Paper Constructed:</h3>
+        <h3>Conference Paper Constructed:</h3>
         <p>Trace element analysis of pyrites in gas shales ablation ICP-MS: Implications for Mobility( 66th Annual GSA Southeastern Section Meeting - 2017)</p><br>
         <h2>Course Introduction:</h2>
         <p>This course introduces the nature, origin, occurrence, distribution, use, and limitations of the earth's mineral resources including abundant and scarce metals, precious metals and gems, building materials, industrial minerals, fossil fuels, nuclear energy, water, soils, and other minerals.</p><br>
