--- a/firstsemester.html
+++ b/firstsemester.html
@@ -10,7 +10,7 @@
   </head>
   <body class="container">
    <header>World of Advising</header>
-   <nav><u><a href="file:///Users/qitongxiao/Desktop/comwebsite/index.html">Home Page</a></u><br>
+   <nav><u><a href="index.html">Home Page</a></u><br>
    <ul><br>
      <li><a href="geoscience.html">Earth Resources, Society and Enviroment</a></li><br>
      <li><a href="firstsemester.html">First-Semester Experience COMM</a></li><br>
