--- a/geoscience.html
+++ b/geoscience.html
@@ -26,13 +26,13 @@
      <h2>Instructor: John Chermak</h2>
        <img src="img/chermak.jpg" width="200" height="200" alt="chermak"/>
        <h3>Specialties: </h3>
-        <p>Water-Rock Interactions, Mining, Water Quality, Water Treatment, Clay Minerals, Acid Rock Drainage, Pit Lakes, Sustainability, Social Responsibility</p><br>
+        <p>Water-Rock Interactions, Mining, Water Quality, Water Treatment, Clay Minerals, Acid Rock Drainage, Pit Lakes, Sustainability, Social Responsibility</p>
         <h3>Article Published:</h3>
-        <p>Processes that control mineral and element abundances in shales (Earth-Science Reviews 171 June)</p><br>
+        <p>Processes that control mineral and element abundances in shales (Earth-Science Reviews 171 June)</p>
         <h3>Conference Paper Constructed:</h3>
-        <p>Trace element analysis of pyrites in gas shales ablation ICP-MS: Implications for Mobility( 66th Annual GSA Southeastern Section Meeting - 2017)</p><br>
+        <p>Trace element analysis of pyrites in gas shales ablation ICP-MS: Implications for Mobility( 66th Annual GSA Southeastern Section Meeting - 2017)</p>
         <h2>Course Introduction:</h2>
-        <p>This course introduces the nature, origin, occurrence, distribution, use, and limitations of the earth's mineral resources including abundant and scarce metals, precious metals and gems, building materials, industrial minerals, fossil fuels, nuclear energy, water, soils, and other minerals.</p><br>
+        <p>This course introduces the nature, origin, occurrence, distribution, use, and limitations of the earth's mineral resources including abundant and scarce metals, precious metals and gems, building materials, industrial minerals, fossil fuels, nuclear energy, water, soils, and other minerals.</p>
           <h2>My opinion:</h2>
           <p>This class provides me a solid foundation of the knowledge in natural resources, as well as the close connection between resources and human activities. I know more knowledge about current enviromental issues.</p>
      </main>
