--- a/hebrewbible.html
+++ b/hebrewbible.html
@@ -24,13 +24,13 @@
    <main>
      <h1>RLCL_2414: Hebrew Bible/Old Testament</h1>
      <h2>Instructor: Megan L. Case</h2>
-     <img src="img/case.jpg" width="100" height="100" "alt="case" style="float: left; margin-right:10px; margin-top: 5px; margin-bottom 5px"/>
-     <br><h3>Selected Publication:</h3>
-      <p>(In Progress) Introductions to “Greek Esther” and “2 Maccabees.” In Jewish Fictional Letters  from Hellenistic Egypt: The Epistle of Aristeas and Related Literature with Greek Text and Translations. Edited by L. Michael White. Atlanta: SBL Press</p><br>
-      <br><h3>Instructor Professional Affiliations:</h3>
-      <p>Society of Biblical Literature</p><br>
+     <img src="img/case.jpg" width="100" height="100" "alt="case"/>
+     <h3>Selected Publication:</h3>
+      <p>(In Progress) Introductions to “Greek Esther” and “2 Maccabees.” In Jewish Fictional Letters  from Hellenistic Egypt: The Epistle of Aristeas and Related Literature with Greek Text and Translations. Edited by L. Michael White. Atlanta: SBL Press</p>
+      <h3>Instructor Professional Affiliations:</h3>
+      <p>Society of Biblical Literature</p>
        <h2>Course Introduction:</h2>
-       <p>This class aims to introduce students to the modern academic study of the Hebrew Bible (Old Testament). The class will focus on the study of the Bible’s history and literature and will explore the main methodologies used in its study, including historical-critical, literary, and gender studies methods.</p><br>
+       <p>This class aims to introduce students to the modern academic study of the Hebrew Bible (Old Testament). The class will focus on the study of the Bible’s history and literature and will explore the main methodologies used in its study, including historical-critical, literary, and gender studies methods.</p>
        <h2>My Opinion</h2>
        <p>This religious class gives a broad view of the history of Ancient Biblical world. Although there are endless readings, the lectures are helpful for me to understand the material. If you want to learn more about Middle East history, I would recommend this class. Otherwise, please choose other classes:)</p>
      </main>
