--- a/firstsemester.html
+++ b/firstsemester.html
@@ -24,16 +24,16 @@
    <main>
      <h1>COMM_1004: First-Semester Experience COMM</h1>
      <h2>Instructor: Susan Stinson</h2>
-      <img src="img/susan.jpg" width="150" height="200" "alt="susan" style="float:left; margin-right:10px; margin-top: 5px; margin-bottom 5px"/>
-       <br><h3>Awards and Honors:</h3>
+      <img src="img/susan.jpg" width="150" height="200" "alt="susan"/>
+       <h3>Awards and Honors:</h3>
        <p>Advisor of the Month, Virginia Tech, Octorber, 2017</p>
-        <br><h3>Outreach and Service:</h3>
+       <h3>Outreach and Service:</h3>
         <p>On a daily basis, Susan (Scout) gathers various cases and reports to bring to the Virginia Assembly on LGBT rights being oppressed by conservative legislature. Scout’s job is a significant part of her life, and part of her humanity.</p>
-        <br><h3>On News Article:</h3>
+        <h3>On News Article:</h3>
         <p><a href="https://www.advising.vt.edu/index.php/past-advisors-of-the-month/232-s-stinson">Past Advisor of the Month</a></p><br>
           <br><h2>Course Introduction:</h2>
           <p>This course is designed to give students the opportunity to receive assistance directly from their academic advisor on a weekly basis as students make the transition from their former college/university.</p>
-             <br><h2>My opinion:</h2>
+             <h2>My opinion:</h2>
              <p>This class is helpful to me as a new transfer student. Scout has been a very nice instructor and advisor throughout the semester, and she has introduced many valuable recources of campus during her lectures.</p>
      </main>
      <aside><u>Related Links</u>
