--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
    <main>
      <h1>My 2018 Fall Semester and the Teachers</h1>
      <img src="img/me.jpg" width="410" height="250" alt="me"/>
-     <p>Hi! My names is Esther Xiao, and I am a third-year Communication major student at Virginia Tech. In this website, I will show you my school life with courses I am taking this semester and the wonderful teachers I have had.</p>
+     <h2>Website Introduction</h2>
+     <p>Hi! Welcome to my "Meet My Teacher" website. My names is Esther Xiao, and I am a third-year Communication major student at Virginia Tech. In this website, I will show you my school courses for this fall semester and the wonderful teachers I'm having.</p>
      <br><p>This semester, I am taking six classes in total. Three of them are Communicaiton classes, and all others are General Education classes of univeristy requirement.</p>
-         <br><br><br><br>It is my pleasure to share all my classes and my wonderful professors. <br>ENJOY YOUR VISIT :)</p><br>
+         <br>It is my pleasure to share all my life with you, enjoy!</p>
      </main>
      <aside><u>Related Links</u>
      <ul><br>
