--- a/visualmedia.html
+++ b/visualmedia.html
@@ -24,16 +24,16 @@
    <main>
      <h1>COMM_2034: Visual Media</h1>
      <h2>Instructor: Carlos Evia</h2>
-     <img src="img/evia2.jpg" width="200" height="210" "alt="Dr.Evia" style="float: left; margin-right:10px; margin-top: 5px; margin-bottom 5px"/>
+     <img src="img/evia2.jpg" width="200" height="210" "alt="Dr.Evia"/>
        <h3>Awards and Honors:</h3>
-        <p>Frank R. Smith Award for Distinguished Article in the Journal Technical Communication. May 2017. </p><br>
+        Frank R. Smith Award for Distinguished Article in the Journal Technical Communication. May 2017.
         <h3>Selected Publications:</h3>
-        <p>Books:“Creating Intelligent Content with Lightweight DITA.” New York, NY: Routledge/Taylor & Francis, Publication date: December 17, 2018.</p><br>
+        <p>Books:“Creating Intelligent Content with Lightweight DITA.” New York, NY: Routledge/Taylor & Francis, Publication date: December 17, 2018.</p>
         <h3>Sponsored Research:</h3>
-        <p>“Science and Engineering Short Course for Technical Writing.” Space and Naval Warfare Systems Command. Amount awarded: $53,079. 2015.</p><br>
-      <br><h2>Course Introduction:</h2>
+        <p>“Science and Engineering Short Course for Technical Writing.” Space and Naval Warfare Systems Command. Amount awarded: $53,079. 2015.</p>
+        <h2>Course Introduction:</h2>
       <p>The purpose of this course is to introduce student to the concepts and skills needed to succeed as producers of media, journalism, public relations, and other communication artifacts. To achieve this goal, students will frequently produce visual and written assignments in this course. In addition, students are expected to become critical consumers of media so that their own media production will be creative, accurate, ethical, and understandable.</p>
-        <br><h2>My opinion:</h2>
+        <h2>My opinion:</h2>
         <p>This is a fascinating class with different class projects. The various media assignments we have done give me the chance to learn new skills. The group projects in this course also help me to further practice my communication skills and prepare me better for the future career path.</p>
      </main>
      <aside><u>Related Links</u>
@@ -48,7 +48,7 @@
      <footer>CONTACT INFORMATION
          <h6>Name: Esther Xiao</h6>
          <h6>Email: xesther@vt.edu</h6>
-         <h6>Location: Blacksburg, Virginia
+         <h6>Location: Blacksburg, Virginia</h6>
      </footer>
   </body>
 </html>
