--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      <h2>Website Introduction</h2>
      <p>Hi! Welcome to my "Meet My Teacher" website. My names is Esther Xiao, and I am a third-year Communication major student at Virginia Tech. In this website, I will show you my school courses for this fall semester and the wonderful teachers I'm having.</p>
      <br><p>This semester, I am taking six classes in total. Three of them are Communicaiton classes, and all others are General Education classes of univeristy requirement.</p>
-         <br>It is my pleasure to share all my life with you, enjoy!</p>
+         <br>It is my pleasure to share my life with you, enjoy!</p>
      </main>
      <aside><u>Related Links</u>
      <ul><br>
@@ -42,7 +42,7 @@
      <footer>CONTACT INFORMATION
          <h6>Name: Esther Xiao</h6>
          <h6>Email: xesther@vt.edu</h6>
-         <h6>Location: Blacksburg, Virginia
+         <h6>Location: Blacksburg, Virginia</h6>
      </footer>
   </body>
 </html>
