--- a/hebrewbible.html
+++ b/hebrewbible.html
@@ -46,7 +46,7 @@
      <footer>CONTACT INFORMATION
          <h6>Name: Esther Xiao</h6>
          <h6>Email: xesther@vt.edu</h6>
-         <h6>Location: Blacksburg, Virginia
+         <h6>Location: Blacksburg, Virginia</h6>
      </footer>
   </body>
 </html>
