--- a/rhetorictradition.html
+++ b/rhetorictradition.html
@@ -24,13 +24,13 @@
    <main>
      <h1>COMM_2064: Rhetoric Tradition</h1>
      <h2>Instructor: Buddy Howell</h2>
-     <img src="img/buddy2.jpg" width="150" height="150" "alt="buddy" style="float: left; margin-right:10px; margin-top: 5px; margin-bottom 5px"/>
+     <img src="img/buddy2.jpg" width="200" height="200" "alt="buddy"/>
      <br><h3>Awards and Honors:</h3>
      <p>Dr. and Mrs. Philip J. Sporn Award for Teaching: Excellence in Teaching Introductory Courses (Finalist), Virginia Tech</p><br>
      <h3>Research Interest:</h3>
-     <p>Reagan at the Summit: Presidential Public Diplomacy and the Collapse of Soviet Communism (monograph in process for submission to Michigan State University Press).</p><br>
+     <p>Reagan at the Summit: Presidential Public Diplomacy and the Collapse of Soviet Communism (monograph in process for submission to Michigan State University Press).</p>
        <h3>Selected Publications:</h3>
-       <p>Books: B. Wayne Howell, "Reagan and Reykjavík: Arms Control, SDI, and the Argument from Human Rights," Rhetoric & Public Affairs, 11 (Fall 2008): 389-415.</p><br>
+       <p>Books: B. Wayne Howell, "Reagan and Reykjavík: Arms Control, SDI, and the Argument from Human Rights," Rhetoric & Public Affairs, 11 (Fall 2008): 389-415.</p>
       <h2>Course Introduction:</h2>
         <p>This course examines the origins of the rhetorical tradition in the Western world from ancient Athens through the twenty-first century.  In contemporary conversations, as well as in the mass media, the term “rhetoric” often connotes “empty talk,” “manipulation,” or “propaganda.”</p>
            <br><h2>My opinion:</h2>
