--- a/firstsemester.html
+++ b/firstsemester.html
@@ -35,6 +35,8 @@
           <p>This course is designed to give students the opportunity to receive assistance directly from their academic advisor on a weekly basis as students make the transition from their former college/university.</p>
              <h2>My opinion:</h2>
              <p>This class is helpful to me as a new transfer student. Scout has been a very nice instructor and advisor throughout the semester, and she has introduced many valuable recources of campus during her lectures.</p>
+             <h2>Grade Expectation</h2>
+             <p>A</p>
      </main>
      <aside><u>Related Links</u>
      <ul><br>
