--- a/hebrewbible.html
+++ b/hebrewbible.html
@@ -33,6 +33,8 @@
        <p>This class aims to introduce students to the modern academic study of the Hebrew Bible (Old Testament). The class will focus on the study of the Bible’s history and literature and will explore the main methodologies used in its study, including historical-critical, literary, and gender studies methods.</p>
        <h2>My Opinion</h2>
        <p>This religious class gives a broad view of the history of Ancient Biblical world. Although there are endless readings, the lectures are helpful for me to understand the material. If you want to learn more about Middle East history, I would recommend this class. Otherwise, please choose other classes:)</p>
+       <h2>Grade Expectation</h2>
+       <p>B</p>
      </main>
      <aside><u>Related Links</u>
      <ul><br>
