--- a/math.html
+++ b/math.html
@@ -34,6 +34,8 @@
         <p>Math 1014 covers topics in Precalculus, including College Algebra and Trigonometry with various applications. It is a self-paced course with all materials available online. It is a self-paced course that responds to individual learning styles.</p>
         <h2>My Opinion:</h2>
         <p>This self-guided course has provided an efficient way of studying the course material. Besides the specialized help sessions at Math Emporium, I can also gain help from my instructor and other tutoring programs at my own time. This class is fun, execpt the fact that I DON'T like Math.</p>
+        <h2>Grade Expectation</h2>
+        <p>C+ - B-</p>
      </main>
      <aside><u>Related Links</u>
      <ul><br>
