--- a/geoscience.html
+++ b/geoscience.html
@@ -35,6 +35,8 @@
         <p>This course introduces the nature, origin, occurrence, distribution, use, and limitations of the earth's mineral resources including abundant and scarce metals, precious metals and gems, building materials, industrial minerals, fossil fuels, nuclear energy, water, soils, and other minerals.</p>
           <h2>My opinion:</h2>
           <p>This class provides me a solid foundation of the knowledge in natural resources, as well as the close connection between resources and human activities. I know more knowledge about current enviromental issues.</p>
+          <h2>Grade Expectation</h2>
+          <p>B</p>
      </main>
      <aside><u>Related Links</u>
      <ul><br>
