--- a/rhetorictradition.html
+++ b/rhetorictradition.html
@@ -33,8 +33,10 @@
        <p>Books: B. Wayne Howell, "Reagan and Reykjavík: Arms Control, SDI, and the Argument from Human Rights," Rhetoric & Public Affairs, 11 (Fall 2008): 389-415.</p>
       <h2>Course Introduction:</h2>
         <p>This course examines the origins of the rhetorical tradition in the Western world from ancient Athens through the twenty-first century.  In contemporary conversations, as well as in the mass media, the term “rhetoric” often connotes “empty talk,” “manipulation,” or “propaganda.”</p>
-           <br><h2>My opinion:</h2>
+           <h2>My opinion:</h2>
            <p>This is one of my favorite classes of this semester. It is important for a Communication major student to understand the historical development of rhetoric. It is a major requiremnt class, and I enjoy it very much!</P>
+            <h2>Grade Expectation</h2>
+             <p>A</p>
      </main>
      <aside><u>Related Links</u>
      <ul><br>
