--- a/visualmedia.html
+++ b/visualmedia.html
@@ -35,6 +35,8 @@
       <p>The purpose of this course is to introduce student to the concepts and skills needed to succeed as producers of media, journalism, public relations, and other communication artifacts. To achieve this goal, students will frequently produce visual and written assignments in this course. In addition, students are expected to become critical consumers of media so that their own media production will be creative, accurate, ethical, and understandable.</p>
         <h2>My opinion:</h2>
         <p>This is a fascinating class with different class projects. The various media assignments we have done give me the chance to learn new skills. The group projects in this course also help me to further practice my communication skills and prepare me better for the future career path.</p>
+        <h2>Grade Expectation</h2>
+        <p>A</p>
      </main>
      <aside><u>Related Links</u>
      <ul><br>
